...
    @State private var shakeOffset: CGFloat = 0.0
    
    // Binding to control the view state
    @Binding var showNextView: DisplayState
    
    // Button properties
    @State var buttonNameTop = "Teacher"
    @State var buttonColorTopIdle = Color.gray
    @State var buttonColorTopActive = Color.black
    @State var buttonColorLogin = Color.black
    @State var buttonNameBottom = "Student"
    @State var buttonColorBottomIdle = Color.gray
    @State var buttonColorBottomActive = Color.black
...
                .cornerRadius(10)
            }
            
            if showTextFields || showCodeField {
                VStack {
                    HStack {
                        TextField("Email", text: showTextFields ? $usernameText : $studentUsernameText)
                            .padding()
                            .background(textFieldOpacity)
                            .cornerRadius(10)
                            .frame(width: 370)
                            .disableAutocorrection(true)
                            .autocapitalization(.none)
                            .padding(.vertical, 5.0)
                    }
                    
                    HStack {
                        if buttonColorTop == Color.black {
                            if teacherPassVisibility == "visible" {
                                TextFieldWithEyeIcon(placeholder: "Password", text: $passwordText, isSecure: false, visibility: $teacherPassVisibility)
                            } else {
                                TextFieldWithEyeIcon(placeholder: "Password", text: $passwordText, isSecure: true, visibility: $teacherPassVisibility)
                            }
                        } else {
                            if studentPassVisibility == "visible" {
                                TextFieldWithEyeIcon(placeholder: "Password", text: $studentPasswordText, isSecure: false, visibility: $studentPassVisibility)
...
                                self.buttonColorTop = isLoginSuccessful ? buttonColorTopSucess : buttonColorLogin
                            }
                            if buttonColorBottom == buttonColorBottomActive {
                                self.buttonColorBottom = isLoginSuccessful ? buttonColorTopSucess : buttonColorLogin
                            }
                        }) {
                            Text("Login")
                                .fontWeight(.bold)
                                .foregroundColor(.white)
                                .frame(width: 275, height: 20, alignment: .center)
                        }
                        .padding()
                        .background(Color.black)
...
