...
                HStack {
                    Button(action: {
                        withAnimation {
                            showNextView = .login
                        }
                    }){
                        Text("Logout")
                            .foregroundColor(Color.black)
                            .fontWeight(.bold)
                            .padding()
                            .background(Color.gray)
                            .cornerRadius(200)
                    }
...
