...
                                
                                Button(action: {
                                    withAnimation {
                                        //show nextView .whateverViewYouWantToShow defined in ContentView Enum
                                        showNextView = .login}
                                }) {
                                    Text("Accept")
                                        .padding()
                                        .background(Color.black)
                                        .foregroundColor(.white)
                                        .cornerRadius(5)
                                }
                                .padding(.bottom, 100)
...
